<resources>
    <string name="app_name">E-KrushiMitra</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="cropadvisor">CROP ADVISOR</string>
    <string name="govscheme">GOVERNMENT SCHEMES</string>
    <string name="mandi">MANDI</string>
    <string name="soildetection">SOIL DETECTION</string>
    <string name="settings">SETTINGS</string>
    <string name="logout1">Log Out</string>
    <string name="clicknew">CLICK NEW</string>
    <string name="upload">UPLOAD</string>
    <string name="changelang">CHANGE LANGUAGE</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="help">HOW CAN I HELP YOU?</string>
    <string name="home">HOME</string>
    <string name="schemename">Scheme Name</string>
    <string name="schemedesc">Scheme Description</string>
    <string name="schemedate">Scheme Launched Date</string>
    <string name="schemeoffsite">Scheme Official Website</string>
    <string name="schemearea">Scheme Applicable State</string>
    <string name="maha">Maharashtra</string>
    <string name="tamil">Tamil Nadu</string>
    <string name="andhra">Andhra Pradesh</string>
    <string name="selectstate">SELECT STATE</string>
    <string name="schemeaudio">Scheme Audio</string>
    <string name="schemevideo">Scheme Video</string>
    <string name="proceedinfo">PROCEED WITH THIS DETAILS</string>
    <string name="formname">Form Name</string>
    <string name="farmername">Name: </string>


    <string name="slide_1_title">Market Rate On One  Click</string>
    <string name="slide_1_desc">The easiest way to find current market rate on single click!</string>

    <string name="slide_2_title">Weather Report</string>
    <string name="slide_2_desc">Get real time weather report!</string>

    <string name="slide_3_title">Ask The Experts</string>
    <string name="slide_3_desc">Best experts give you the best solution for your problem!</string>

    <string name="slide_4_title">Agro Library</string>
    <string name="slide_4_desc">You will get all the details about your Agro!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="scheme">Scheme</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in1">Log In</string>

    <string name="nointernet">Not connected to internet!</string>

    <!--url list-->

    <string name="loginUrl">login.php</string>
    <string name="signupUrl">register.php</string>
    <string name="SchemeName">getSchemeName.php</string>
    <string name="SchemeSearch">getSearchScheme.php</string>

    <string name="chooselang">Choose Language</string>
    <string-array name="languages">
        <item>Select Language</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>English</item>
    </string-array>

    <string-array name="gen">
        <item>--SELECT--</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string-array name="region">
        <item>SELECT REGION</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="crop">
        <item>SELECT CROP</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="disease">
        <item>SELECT DISEASE</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="state">
        <item>SELECT STATE</item>
        <item>Maharashtra</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>West Bengal</item>
        <item>Tamil Nadu</item>
        <item>Tripura</item>
        <item>Uttar Pradesh </item>
        <item>Ghazipur</item>
        <item>Hardoi</item>
        <item>Rampur</item>
        <item>Agra</item>
        <item>Farrukhabad</item>
        <item>Bulandshahr</item>
        <item>Uttarakhand</item>
        <item>Purulia</item>
        <item>Tamil Nadu</item>
        <item>Karnataka</item>


    </string-array>
    <string-array name="city">
        <item>SELECT CITY</item>
        <item>Punjab</item>
        <item>kerala</item>
        <item>Mumbai</item>

    </string-array>

    <string-array name="cr">
        <item>SELECT CROP</item>
        <item>Wheat</item>

    </string-array>
    <string-array name="question">
        <item>SELECT YOUR QUESTION ABOUT</item>
        <item>Is there any Damage to your crop?</item>
        <item>what to do for improve productivity of crop?</item>
        <item>Other Schemes</item>

    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="cat">
        <item>SELECT SCHEME CATEGORY</item>
        <item>Schemes For Farmers</item>
        <item>Schemes For Poors</item>
        <item>Schemes For Womens</item>
        <item>Schemes For Investing In Farms</item>

    </string-array>


    <string-array name="nav_item_activity_titles">
        <item>Crop Advisor</item>
        <item>Government Schemes</item>
        <item>Soil Detection</item>
        <item>Mandi</item>
        <item>Settings</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

</resources>
