<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CropAdv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activities.MainActivity">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btnCrop"
            android:layout_margin="20dp"
            android:gravity="center"
            android:contextClickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/wheat"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/cropadvisor"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="190dp"
            android:background="#acacac"
            android:alpha="0.5"/>

        <LinearLayout
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:contextClickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/farmer" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/govscheme"
                android:textColor="#000000"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bottom"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/btnThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contextClickable="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/rake" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/soildetection"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="190dp"
            android:background="#acacac"
            android:alpha="0.5"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/btnFour"
            android:contextClickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/fruits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/mandi"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/btnFive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:contextClickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/exchange" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/changelang"
                android:textColor="#000000"
                android:textSize="16sp" />


        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="190dp"
            android:background="#acacac"
            android:alpha="0.5"/>



        <LinearLayout
            android:id="@+id/btnSix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contextClickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical|center_horizontal"
                android:src="@drawable/edituser" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/editprofile"
                android:textColor="#000000"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#ffffff"></FrameLayout>

</LinearLayout>

